infrastructure/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailqueue-app
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/component: web
  template:
    metadata:
      labels:
        app.kubernetes.io/component: web
    spec:
      imagePullSecrets:
        - name: ghcr-creds
      containers:
        - name: app
          image: ghcr.io/mightymax/mailqueue:latest
          imagePullPolicy: IfNotPresent
          command:
            - /bin/sh
            - -c
            - npm run db:migrate && npm run start:prod
          ports:
            - name: http
              containerPort: 3000
          readinessProbe:
            tcpSocket:
              port: http
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 6
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 20
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
