infrastructure/base/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailqueue-worker
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app.kubernetes.io/component: worker
  template:
    metadata:
      labels:
        app.kubernetes.io/component: worker
    spec:
      imagePullSecrets:
        - name: ghcr-creds
      containers:
        - name: worker
          image: ghcr.io/mightymax/mailqueue:latest
          imagePullPolicy: IfNotPresent
          command:
            - /bin/sh
            - -c
            - npm run db:migrate && npm run worker
          resources:
            requests:
              cpu: 25m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
