infrastructure/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailqueue-app
spec:
  selector:
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
