infrastructure/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailqueue
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "32k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "8"
    nginx.ingress.kubernetes.io/proxy-busy-buffers-size: "64k"
spec:
  ingressClassName: nginx
  rules:
    - host: mailqueue.ldmax.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mailqueue-app
                port:
                  name: http
